// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaySticker should render a \`danger color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-danger">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`dark color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-dark">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`info color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-info">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`light color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-light">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`primary color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`secondary color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-secondary">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`success color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-success">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`unstyled\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-unstyled">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a \`warning color\` sticker 1`] = `
<span class="sticker sticker-rounded sticker-warning">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a bottom left positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-bottom-left">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a bottom right positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-bottom-right">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a circle sticker 1`] = `
<span class="sticker sticker-circle sticker-primary">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a extra large sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-xl">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a large sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-lg">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a small sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-sm">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a sticker with classes 1`] = `
<span class="sticker sticker-rounded sticker-primary my-custom-class">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a sticker with icon 1`] = `
<span class="sticker sticker-rounded sticker-primary">
  <span class="inline-item">
    <svg class="lexicon-icon lexicon-icon-plus" focusable="false" role="presentation">
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </span>
</span>
`;

exports[`ClaySticker should render a sticker with id 1`] = `
<span class="sticker sticker-rounded sticker-primary" id="myId">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a sticker with image 1`] = `
<span class="sticker sticker-rounded sticker-primary">
  <span class="sticker-overlay">
    <img alt="" class="sticker-img" src="imageurl">
  </span>
</span>
`;

exports[`ClaySticker should render a sticker with image and imagen alternate text 1`] = `
<span class="sticker sticker-rounded sticker-primary">
  <span class="sticker-overlay">
    <img alt="imageAlt" class="sticker-img" src="imageurl">
  </span>
</span>
`;

exports[`ClaySticker should render a sticker with label 1`] = `
<span class="sticker sticker-rounded sticker-primary">
  <span class="sticker-overlay">
    <span>Doc E. Brown</span>
  </span>
</span>
`;

exports[`ClaySticker should render a sticker with title 1`] = `
<span class="sticker sticker-rounded sticker-primary" title="My awesome title">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a top left positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-top-left">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render a top right positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-top-right">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render an outside bottom left positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-outside sticker-bottom-left">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render an outside bottom right positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-outside sticker-bottom-right">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render an outside top left positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-outside sticker-top-left">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render an outside top right positioned sticker 1`] = `
<span class="sticker sticker-rounded sticker-primary sticker-outside sticker-top-right">
  <span class="sticker-overlay"></span>
</span>
`;

exports[`ClaySticker should render the default markup 1`] = `
<span class="sticker sticker-rounded sticker-primary">
  <span class="sticker-overlay"></span>
</span>
`;
